--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Build-Depends: debhelper (>= 9),
                python3-pbr,
                python3-setuptools
 Standards-Version: 3.9.5
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-dib-utils.git
-Vcs-Git: git://anonscm.debian.org/openstack/python-dib-utils.git
+Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-dib-utils.git/
+Vcs-Git: https://anonscm.debian.org/git/openstack/python-dib-utils.git
 Homepage: https://github.com/openstack/dib-utils
 
 Package: python-dib-utils
